Updates on the DSP files, part 1
All sources except STRING have been updated, comparison pending. Omnipath discarded and EVEx not updated because there were no changes in the original source.
NOTE: Large files have NOT been updated.

--- a/BioGRID/BioGRID_dsgen.Rmd
+++ b/BioGRID/BioGRID_dsgen.Rmd
@@ -21,28 +21,26 @@ suppressPackageStartupMessages({
 I download the latest version of the BioGRID data from mentha website. I have tried using PSICQUIC, however, downloading whole mentha using PSICQUIC takes too much time. Now, however, the link should be updated manually to get the latest mentha release. Current file was downloaded on `r BioGRID_mentha_date`. 
 
 ```{r message=FALSE, warning=FALSE}
-if(!file.exists("./source_files/2017-02-27_MITAB-2.5.zip")){
-        mentha_url = "http://mentha.uniroma2.it/dumps/2017-02-27_MITAB-2.5.zip"
+if(!file.exists("./source_files/2020-01-14_MITAB-2.5.zip")){
+        mentha_url = "http://mentha.uniroma2.it/dumps/2020-01-14_MITAB-2.5.zip"
         # httr::GET(http://mentha.uniroma2.it/doDownload.php?file=2017-02-27_MITAB-2.5.zip) - this is how I got the direct link
-        download(mentha_url, destfile = "./source_files/2017-02-27_MITAB-2.5.zip")
+        download(mentha_url, destfile = "./source_files/2020-01-14_MITAB-2.5.zip")
 }
-unzip("./source_files/2017-02-27_MITAB-2.5.zip", exdir = "./source_files/")
-# databases <- c("mentha")
-## Query PSICQUIC for interactions, get MI-TAB-2.5, save
-# source("./scripts/query_PSICQUIC_for_interactions.R")
-# query_PSICQUIC_for_interactions(SPECIES_ID = "all", SPECIES_NAME = "all", databases= "mentha", date = BioGRID_mentha_date,
-#                                          database.name = "./source_files/mentha_mitab25.txt", return_data = F, show_summary = F, MITAB = "tab25")
+unzip("./source_files/2020-01-14_MITAB-2.5.zip", exdir = "./source_files/")
 ```
 
 Filtering BioGRID only interactions and cleaning up the BioGRID file.
 
 ```{r message=FALSE, warning=FALSE}
-mentha = fread("./source_files/2017-02-27_MITAB-2.5", header = F, sep = "\t", colClasses = "character")
+mentha = fread("./source_files/2020-01-14_MITAB-2.5", 
+               header = F, 
+               sep = "\t",
+               colClasses = "character")
 biogrid_from_mentha = mentha[V13 == "psi-mi:\"MI:0463\"(biogrid)",]
 biogrid_from_mentha[,table(V12)]
 fwrite(x = biogrid_from_mentha, file = "./processed_files/biogrid_mitab25.txt",sep = "\t")
 system("perl ./scripts/MITAB25extractor_v12.pl ./processed_files/biogrid_mitab25.txt ./processed_files/biogrid_pairs.txt")
-unlink(c("./source_files/2017-02-27_MITAB-2.5","./processed_files/biogrid_mitab25.txt"))
+unlink(c("./source_files/2020-01-14_MITAB-2.5","./processed_files/biogrid_mitab25.txt"))
 ```
 
 Saving a table of interacting pairs, publication IDs and BioGRID tag. Selecting human protein-human protein only interactions.
